Fix "start of line" (^) and "end of line" ($) regular expressions when the whole text is fed to KFind rather than line by line.

This is basically hitting a documented limitation of QRegExp (no support for the equivalent of perl's /m) and splitting
the text into lines in the case where the regexp starts with ^ or ends with $.

BUG: 237296
Fixed-In: 4.5

svn path=/trunk/KDE/kdelibs/; revision=1128196